tests/test_date/good/rounding_option_en.catala_en
```catala

declaration scope CheckAgeIsLessThan:
  input bday content date
  input today content date
  input age content duration
  output r content boolean

scope CheckAgeIsLessThan:
  definition r equals bday + age <= today
  date round increasing

declaration scope Test:
  output r content boolean

scope Test:
  definition r equals (output of CheckAgeIsLessThan with
                      { -- bday: |2000-02-29|
                        -- today: |2018-03-01|
                        -- age: 18 year}).r
  assertion r

```



```catala-test-inline
$ catala Typecheck --check-invariants
[RESULT] Invariant typing_defaults checked. result: [49/49]
[RESULT] Invariant match_inversion checked. result: [0/0]
[RESULT] Invariant app_inversion checked. result: [3/3]
[RESULT] Invariant no_return_a_function checked. result: [2/2]
[RESULT] Invariant no_partial_evaluation checked. result: [3/3]
[RESULT] Invariant default_no_arrow checked. result: [4/4]
[RESULT] Typechecking successful!
```

```catala-test-inline
$ catala Interpret -s Test
[RESULT] Computation successful! Results:
[RESULT] r = true
```

```catala-test-inline
$ catala Interpret_Lcalc -s Test --avoid-exceptions --optimize
[RESULT] Computation successful! Results:
[RESULT] r = true
```
